# pelftool

./: Cargo.toml  LICENSE  README.md
.github/workflows/: clippy-action.yml  rust.yml
src/: analyzer.rs  cli.rs  main.rs  tui.rs
src/analyzer/: elf_header.rs  elf_section.rs  elf_segment.rs
